DIG-8379 Fix chart sizing and signpost text wrapping

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,3 +16,8 @@ img {
   height: auto;
   display: block;
 }
+.signpost-content,
+.signpost-content * {
+  word-break: break-word;
+  overflow-wrap: anywhere;
+}
